# Drawer

./: .gitignore  CMakeLists.txt  main.cpp  mainUI.cpp  mainUI.h  qrc_testqt.cpp  style.qss  testqt.cpp  testqt.h  ui_testqt.h
DetectingMethods/: DetectionPolicy.cpp  DetectionPolicy.h
Drawing/: DrawManager.cpp  DrawManager.h  Drawer.cpp  Drawer.h
Report/: report.tex
Useful/: BasicMethods.cpp  BasicMethods.h  Clusterer.cpp  Clusterer.h  Displayer.cpp  Displayer.h  KeyHandler.cpp  KeyHandler.h
